--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="18" />
+    <!--<uses-sdk-->
+        <!--android:minSdkVersion="9"-->
+        <!--android:targetSdkVersion="18" />-->
 
     <!-- Push Settings Start -->
 
