--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -3,12 +3,14 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
+//    compileSdkVersion 27
+//    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -131,8 +133,12 @@ uploadArchives {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.google.firebase:firebase-messaging:10.2.6'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.ibm.mobilefirstplatform.clientsdk.android:core:3.+'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.android.support:animated-vector-drawable:28.0.0'
+    implementation 'com.android.support:customtabs:28.0.0'
+    implementation 'com.google.firebase:firebase-messaging:10.2.6'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.ibm.mobilefirstplatform.clientsdk.android:core:3.+'
 }
